[gd_scene load_steps=20 format=3 uid="uid://quq3jmj2g2o3"]

[ext_resource type="Script" uid="uid://xn1yurktxndh" path="res://escenas/NIVELES/nivel_2.gd" id="1_a7vfq"]
[ext_resource type="AudioStream" uid="uid://c4r2kbct5m3yy" path="res://sonido/shine.mp3" id="1_gfso8"]
[ext_resource type="Texture2D" uid="uid://wi5ebu7t740t" path="res://png/OtroFondo.png" id="2_65owk"]
[ext_resource type="AudioStream" uid="uid://bplo245yolb7m" path="res://sonido/wrong-answer-21-199825.mp3" id="2_dr8b4"]
[ext_resource type="Texture2D" uid="uid://cp5w2p4vwgs6a" path="res://png/Iconoperro.png" id="3_gy1f0"]
[ext_resource type="Script" uid="uid://dvqvnpvwlfs25" path="res://escenas/NIVELES/perro.gd" id="3_h5ahq"]
[ext_resource type="AudioStream" uid="uid://3sjc0jccaeqc" path="res://sonido/musicanivel.mp3" id="3_lmi3k"]
[ext_resource type="Script" uid="uid://5esys1fuqugv" path="res://escenas/NIVELES/spawner.gd" id="4_65owk"]
[ext_resource type="AudioStream" uid="uid://bk6ojl1c4qg3r" path="res://sonido/click_ui.wav" id="4_abaqm"]
[ext_resource type="FontFile" uid="uid://ey3cboyli4fi" path="res://png/Jersey10-Regular.ttf" id="4_nocdj"]
[ext_resource type="Texture2D" uid="uid://d1xdam1s4pyak" path="res://png/corazon.png" id="5_h5ahq"]
[ext_resource type="PackedScene" uid="uid://cqjbcc8mywlgw" path="res://escenas/NIVELES/nivel_2_1.tscn" id="5_nocdj"]
[ext_resource type="Texture2D" uid="uid://k61ky25f6q45" path="res://png/Galeria_4.jpg" id="6_c44vn"]
[ext_resource type="PackedScene" uid="uid://rqls4ssma262" path="res://escenas/NIVELES/nivel_2_2.tscn" id="6_h5ahq"]
[ext_resource type="Texture2D" uid="uid://cpgv428elrw6s" path="res://png/100x100.png" id="7_x3j0h"]
[ext_resource type="Texture2D" uid="uid://7xl4d2hjl2uh" path="res://png/player.png" id="8_lcqui"]
[ext_resource type="Texture2D" uid="uid://d104uowpn8hct" path="res://png/Per.__cuerpo_A.png" id="9_fc2it"]
[ext_resource type="Texture2D" uid="uid://cfs5kv7dgyreu" path="res://png/rotate.png" id="14_c44vn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjif1"]
size = Vector2(212, 202.5)

[node name="NIVEL2" type="Area2D"]
collision_mask = 10
script = ExtResource("1_a7vfq")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(575.5, 326.5)
scale = Vector2(1.44625, 1.07167)
texture = ExtResource("2_65owk")

[node name="Perro" type="CharacterBody2D" parent="."]
script = ExtResource("3_h5ahq")

[node name="Sprite2D" type="Sprite2D" parent="Perro"]
position = Vector2(588, 545.672)
scale = Vector2(0.106141, 0.0963595)
texture = ExtResource("3_gy1f0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perro"]
position = Vector2(591, 547.25)
shape = SubResource("RectangleShape2D_pjif1")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("4_65owk")
vitamina_scene = ExtResource("5_nocdj")
garrapata_scene = ExtResource("6_h5ahq")
contenedor = NodePath("../VitaminasyGarrapatas")

[node name="VitaminasyGarrapatas" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContadorVitaminas" type="Label" parent="UI"]
layout_mode = 0
offset_left = 963.0
offset_top = 20.0
offset_right = 1301.0
offset_bottom = 111.0
scale = Vector2(0.504246, 0.8962)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_nocdj")
theme_override_font_sizes/font_size = 70
text = "0/10 vitaminas"

[node name="Vidas" type="Node2D" parent="UI"]

[node name="Vida1" type="Sprite2D" parent="UI/Vidas"]
position = Vector2(1105, 121)
scale = Vector2(0.013746, 0.0149239)
texture = ExtResource("5_h5ahq")

[node name="Vida2" type="Sprite2D" parent="UI/Vidas"]
position = Vector2(1014, 122)
scale = Vector2(0.0143063, 0.0147236)
texture = ExtResource("5_h5ahq")

[node name="Vida3" type="Sprite2D" parent="UI/Vidas"]
position = Vector2(923, 121)
scale = Vector2(0.0147236, 0.0147236)
texture = ExtResource("5_h5ahq")

[node name="DialogoPrevio" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FondoDialogo" type="TextureRect" parent="DialogoPrevio"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 798.0
offset_bottom = 598.0
scale = Vector2(1.44566, 1.08127)
texture = ExtResource("6_c44vn")

[node name="NinePatchRect" type="NinePatchRect" parent="DialogoPrevio"]
modulate = Color(0.105882, 0.0431373, 0.980392, 1)
layout_mode = 0
offset_left = 277.0
offset_top = 464.0
offset_right = 317.0
offset_bottom = 504.0
scale = Vector2(9.04381, 3.92247)
texture = ExtResource("7_x3j0h")

[node name="Nombre" type="Label" parent="DialogoPrevio/NinePatchRect"]
layout_mode = 0
offset_left = 1.32687
offset_top = -3.82412
offset_right = 41.3269
offset_bottom = 27.1759
scale = Vector2(0.249044, 0.624432)
theme_override_fonts/font = ExtResource("4_nocdj")
theme_override_font_sizes/font_size = 28

[node name="Texto" type="Label" parent="DialogoPrevio/NinePatchRect"]
layout_mode = 0
offset_left = 1.76916
offset_top = -0.509884
offset_right = 151.769
offset_bottom = 49.4901
scale = Vector2(0.263938, 0.817351)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("4_nocdj")
theme_override_font_sizes/font_size = 12
text = "Tenemos otra misión!!
El perro tiene un déficit de 
vitaminas, debes cogerlas y
 evita las garrapatas!!"

[node name="BotonEmpezar" type="TextureButton" parent="DialogoPrevio/NinePatchRect"]
layout_mode = 0
offset_left = 32.0661
offset_top = 1.01976
offset_right = 544.066
offset_bottom = 513.02
scale = Vector2(0.0145332, 0.0171952)
texture_normal = ExtResource("8_lcqui")

[node name="Personaje" type="Sprite2D" parent="DialogoPrevio"]
position = Vector2(167, 433)
scale = Vector2(0.90041, 0.843615)
texture = ExtResource("9_fc2it")

[node name="Derrota" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fondo" type="TextureRect" parent="Derrota"]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 650.0
texture = ExtResource("6_c44vn")

[node name="Cuadrado" type="TextureRect" parent="Derrota"]
modulate = Color(0, 0.0156863, 1, 1)
layout_mode = 0
offset_left = 264.0
offset_top = 374.0
offset_right = 852.0
offset_bottom = 540.0
texture = ExtResource("7_x3j0h")

[node name="Personaje" type="Sprite2D" parent="Derrota"]
position = Vector2(961, 394)
scale = Vector2(-0.954738, 1.01733)
texture = ExtResource("9_fc2it")

[node name="Texto" type="Label" parent="Derrota"]
layout_mode = 0
offset_left = 282.0
offset_top = 377.0
offset_right = 833.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("4_nocdj")
theme_override_font_sizes/font_size = 40
text = "Vaya!!
No hemos conseguido las vitaminas 
suficientes. Buena suerte a la proxima!!"

[node name="BotonReintentar" type="TextureButton" parent="Derrota"]
layout_mode = 0
offset_left = 638.0
offset_top = 544.0
offset_right = 1150.0
offset_bottom = 1056.0
rotation = 1.57084
scale = Vector2(0.203545, 0.323002)
texture_normal = ExtResource("14_c44vn")

[node name="Victoria" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fondo" type="TextureRect" parent="Victoria"]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 652.0
texture = ExtResource("2_65owk")

[node name="Texto" type="Label" parent="Victoria"]
layout_mode = 0
offset_left = 163.0
offset_top = 48.0
offset_right = 996.0
offset_bottom = 235.0
theme_override_fonts/font = ExtResource("4_nocdj")
theme_override_font_sizes/font_size = 85
text = "         ¡MISIÓN CUMPLIDA!
!Suerte en el siguiente nivel!"

[node name="BotonSiguienteNivel" type="TextureButton" parent="Victoria"]
layout_mode = 0
offset_left = 998.0
offset_top = 290.0
offset_right = 1510.0
offset_bottom = 802.0
scale = Vector2(0.257032, 0.219178)
texture_normal = ExtResource("8_lcqui")

[node name="Perro" type="Sprite2D" parent="Victoria"]
position = Vector2(560, 420)
scale = Vector2(0.163401, 0.115431)
texture = ExtResource("3_gy1f0")

[node name="Sonidos" type="Node2D" parent="."]

[node name="SonidoVitamina" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource("1_gfso8")

[node name="SonidoDaño" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource("2_dr8b4")

[node name="MusicaFondo" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource("3_lmi3k")

[node name="SonidoClick" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource("4_abaqm")
